welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:15: error: not found: value posebiscuit
  posebiscuit()
  ^